--- a/Eaglercraft_1.12.2_WASM_Offline_Download.html
+++ b/Eaglercraft_1.12.2_WASM_Offline_Download.html
@@ -28,7 +28,7 @@
     <li><a href="servers.html">Servers</a></li>
     <li><a href="skins.html">Skins</a></li>
     <li><a href="mc quick guide/index.html" target="_blank">Quick Guide</a></li>
-    <li style="float: right;"><a href="https://cobblesteve01.github.io/Eaglercraft-Extras/clients/1.14" target="_blank"><img src="assets/github.png" style="height: 25px; color: white;" alt=""></a></li>
+    <li style="float: right;"><a href="https://cobblesteve01.github.io/Eaglercraft-Extras/clients/1.14/index.html" target="_blank"><img src="assets/github.png" style="height: 25px; color: white;" alt=""></a></li>
 </ul>
 
 <br><br><br><br>
