--- a/Eaglercraft_1.12.2_WASM_Offline_Download.html
+++ b/Eaglercraft_1.12.2_WASM_Offline_Download.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Play Minecraft 1.20 in your browser">
-    <meta name="keywords" content="eaglercraft, eaglercraftx, minecraft, 1.20">
-    <title>Eaglercraft 1.14</title>
-    <meta property="og:locale" content="en-US">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Eaglercraft 1.20">
-    <meta property="og:description" content="Play Minecraft 1.20 in your browser">
-    <meta property="og:image" content="favicon.png">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="styles.css">
-    <script src="fix-webm-duration.js"></script>
-</head>
-<body style="margin: 0; width: 100vw; height: 100vh; overflow: hidden;">   
-    <div id="game-frame">
-
-
-        
-    </div>
-</body>
+<html lang="und" style="width:100%;height:100%;background-color:black;">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+		<meta name="description" content="Eaglercraft 1.12 test directory HTML page">
+		<meta name="keywords" content="eaglercraft, eaglercraftx, minecraft, 1.12, 1.12.2">
+		<title>Eaglercraft 1.14.4</title>
+		<meta property="og:locale" content="en-US">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Eaglercraft 1.12.2">
+		<meta property="og:description" content="test directory HTML page">
+		<link type="image/png" rel="shortcut icon" href="favicon.png">
+		<script type="text/javascript" src="classes.js"></script>
+		<script type="text/javascript">
+			"use strict";
+			window.addEventListener("load", function() {
+				if(window.location.href.indexOf("file:") === 0) {
+					alert("HTTP please, do not open this file locally, run a local HTTP server and load it via HTTP");
+				}else {
+					var relayId = Math.floor(Math.random() * 3);
+					window.eaglercraftXOpts = {
+						demoMode: false,
+						container: "game_frame",
+						assetsURI: "assets.epk",
+						localesURI: "lang/",
+						worldsDB: "worlds",
+						servers: [
+							{ addr: "wss://play.zelz.net", name: "ZelzNet" },
+							{ addr: "wss://mc.arch.lol", name: "ArchMC" },
+							{ addr: "wss://beta.arch.lol", name: "§r §r §r §r §4§lArchMC Beta" }
+    						]
+					};
+					main();
+				}
+			});
+		</script>
+	</head>
+	<body style="margin:0px;width:100%;height:100%;overflow:hidden;background-color:black;" id="game_frame">
+	</body>
 </html>
